Views/styles/feed.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');

* {
    margin: 0;
    box-sizing: border-box;
}

#userFeed {
    margin-left: calc(24.79vw + 32px);
    display: flex;
    flex-flow: column;
    gap: 32px;
    align-items: center;
}

body {
    font-family: 'Inter', sans-serif;
    background-color: #F5F2F6;
}

.postCard {
    background-color: white;
    border-radius: 25px;
    width: 100%;
    max-width: 820px;
    padding: 16px 32px;
    font-size: 24px;

}

.cardHeader {
    display: flex;
    gap: 10px;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 10px;
}

.cardHeader div {
    display: flex;
    flex-flow: column nowrap;
}

.cardUserName {
    font-weight: 500;
}

.cardHeader div span + span,
.cardFooter {
    color: #7D7373;
}


.cardHeader img {
    width: 4.44vw;
    height: 4.44vw;
    border: solid 1px;
    border-radius: 100%;
}

.cardBody p {
    padding: 16px 32px;
}

#userFeed .postCta {
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 8px;
}

input[name="postContent"] {
    background: white;
    border: none;
    padding: 16px 32px;
    width: calc(100%);
    max-width: 600px;
    border-radius: 50px;
}

button[name="postPost"],
.mediaInput {
    background-color: #39E168;
    border-radius: 50px;
    border: none;
    padding: 16px 32px;
    font-size: 1rem;
    cursor: pointer
}

button[name="postPost"]:hover,
.mediaInput:hover {
    background-color: #2B2626;
}

input[type="file"] {
    display: none;
}

.hide {
    display: none;
}

